emitir produto completo
